[package]
name = "funq"
version = "0.1.0"
description = "Function-call based event loop"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.76.0"
license = "GPL-3.0"
edition = "2021"

[dependencies]
funq_derive = { path = "./funq_derive" }
rustix.workspace = true
