[package]
name = "funq"
version = "0.1.0"
description = "Function-call based event loop"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
license = "GPL-3.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
funq_derive = { path = "./funq_derive" }
rustix.workspace = true
