[package]
name = "libwpe-sys"
version = "0.1.0"
description = "System bindings for WebKit's libwpe"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "libwpe", "browser", "embedded"]
edition = "2024"

links = "wpe"

[build-dependencies]
pkg-config = "0.3.30"
