[package]
name = "wpe-jsc-sys"
version = "0.1.0"
description = "System bindings for WPE WebKit's JavaScriptCore"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.76.0"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "jsc", "browser", "embedded"]
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.wpe_webkit_2_0]
name = "wpe-webkit-2.0"
version = "2.38"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[dependencies]
libc = "0.2"
glib-sys = "0.19.0"
gobject-sys = "0.19.0"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
