[package]
name = "wpe-jsc-sys"
version = "0.1.0"
description = "System bindings for WPE WebKit's JavaScriptCore"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "jsc", "browser", "embedded"]
build = "build.rs"

[package.rust-version]
workspace = true

[package.edition]
workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[package.metadata.system-deps.wpe_webkit_2_0]
name = "wpe-webkit-2.0"
version = "2.50"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
