[package]
name = "wpe-jsc"
version = "0.1.0"
description = "Rust bindings for WPE WebKit's JavaScriptCore"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "jsc", "browser", "embedded"]
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc.workspace = true
glib.workspace = true

[dependencies.ffi]
package = "wpe-jsc-sys"
path = "../wpe-jsc-sys"
