[package]
name = "wpe-platform"
version = "0.1.0"
description = "Rust bindings for WPE Platform"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "wpewebkit", "browser", "embedded"]
rust-version.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
glib-sys.workspace = true
glib.workspace = true
gobject-sys.workspace = true
libc.workspace = true
xkbcommon-sys.workspace = true

[dependencies.ffi]
package = "wpe-platform-sys"
path = "../wpe-platform-sys"
