[package]
name = "wpe-webkit-sys"
version = "0.1.0"
description = "System bindings for WPE WebKit"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "wpewebkit", "browser", "embedded"]
build = "build.rs"
rust-version.workspace = true
edition.workspace = true

[package.metadata.system-deps.wpe_webkit_2_0]
name = "wpe-webkit-2.0"
version = "2.48"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dependencies.gio-sys]
workspace = true

[dependencies.soup-sys]
workspace = true

[dependencies.wpe-sys]
package = "libwpe-sys"
path = "../libwpe-sys"

[dependencies.wpe-java-script-core-sys]
package = "wpe-jsc-sys"
path = "../wpe-jsc-sys"

[dependencies.wpe-platform-sys]
path = "../wpe-platform-sys"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
