[package]
name = "wpe-webkit"
version = "0.1.0"
description = "Rust bindings for WPE WebKit"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.76.0"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "wpewebkit", "browser", "embedded"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
glib = "0.19.0"
gio = "0.19.2"
gobject-sys = "0.19.0"

[dependencies.ffi]
package = "wpe-webkit-sys"
path = "../wpe-webkit-sys"

[dependencies.wpe-sys]
package = "libwpe-sys"
path = "../libwpe-sys"

[dependencies.wpe-java-script-core]
package = "wpe-jsc"
path = "../wpe-jsc"

[dependencies.soup]
package = "soup3"
version = "0.6.0"
