[package]
name = "wpe-webkit"
version = "0.1.0"
description = "Rust bindings for WPE WebKit"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
categories = ["api-bindings"]
keywords = ["webkit", "wpe", "wpewebkit", "browser", "embedded"]
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
gio.workspace = true
glib.workspace = true
gobject-sys.workspace = true
libc.workspace = true
soup.workspace = true

[dependencies.ffi]
package = "wpe-webkit-sys"
path = "../wpe-webkit-sys"

[dependencies.wpe-sys]
package = "libwpe-sys"
path = "../libwpe-sys"

[dependencies.wpe-java-script-core]
package = "wpe-jsc"
path = "../wpe-jsc"

[dependencies.wpe-platform]
package = "wpe-platform"
path = "../wpe-platform"
