[package]
name = "funq_derive"
version = "0.1.0"
description = "Derive macros for funq"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/kumo"
rust-version = "1.76.0"
license = "GPL-3.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.51", features = ["full", "extra-traits"] }
